--- a/index.html
+++ b/index.html
@@ -24,10 +24,23 @@
 </head>
 <body>
 
+    <nav style="background: #333; padding: 10px; margin-bottom: 20px;">
+        <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none;">Home</a>
+        <a href="#projects" style="color: white; margin: 0 15px; text-decoration: none;">Projects</a>
+        <a href="#contact" style="color: white; margin: 0 15px; text-decoration: none;">Contact</a>
+    </nav>
+
     <div class="card">
         <h1>Welcome to My Digital Space!</h1>
-        <p>Hi, I am [Student Name]. I am a student at [School/Organization].</p>
-        <p>This site is currently under construction. Stay tuned!</p>
+        <p>Hi, I am [Student Name]. I am a student and aspiring developer.</p>
+        
+        <hr>
+
+        <h3 id="projects">My Projects</h3>
+        <p>Currently working on my first GitHub website!</p>
+
+        <h3 id="contact">Get in Touch</h3>
+        <p>You can find me on GitHub at: <a href="https://github.com/[username]">github.com/[username]</a></p>
     </div>
 
 </body>
