--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio | [Student Name]</title>
+    <title>My Portfolio | Ire</title>
     <style>
         body {
             font-family: sans-serif;
@@ -32,7 +32,7 @@
 
     <div class="card">
         <h1>Welcome to My Digital Space!</h1>
-        <p>Hi, I am [Student Name]. I am a student and aspiring developer.</p>
+        <p>Hi, I am Ire. I am a student and aspiring developer.</p>
         
         <hr>
 
@@ -40,7 +40,7 @@
         <p>Currently working on my first GitHub website!</p>
 
         <h3 id="contact">Get in Touch</h3>
-        <p>You can find me on GitHub at: <a href="https://github.com/[username]">github.com/[username]</a></p>
+        <p>You can find me on GitHub at: <a href="https://github.com/Banjeebee">github.com/Banjeebee</a></p>
     </div>
 
 </body>
