--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
             margin: 15px 0;
             text-align: left;
         }
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%; /* This makes it a circle */
+            border: 5px solid #007bff;
+            margin-top: -75px; /* Pulls it up halfway over the header */
+            background: white;
+        }
+        .header-bg {
+            height: 150px;
+            background: #007bff;
+            border-radius: 12px 12px 0 0;
+            margin: -20px -20px 20px -20px;
+        }
     </style>
 </head>
 <body>
@@ -54,6 +68,12 @@
     <div class="container">
         <h1>Welcome to My Digital Space!</h1>
         <p>Hi, I am Ire. I am a student and aspiring developer.</p>
+
+        <div class="header-bg"></div>
+        <img src="https://github.com/[username].png" alt="Profile Picture" class="profile-pic">
+        
+        <h1>Ire]</h1>
+        <p>STEM Student | Aspiring Web Developer</p>
         
         <hr>
 
